--- a/css/media.css
+++ b/css/media.css
@@ -1,1 +1,96 @@
 /* media */
+
+@media (max-width: 1230px){
+    .container{
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+
+
+
+
+/* HEADER */
+
+@media (max-width: 1100px){
+    .btn__call{
+        font-size: 16px;
+    }
+
+    .wrapp_link {
+        margin-right: 15px;
+    }
+
+
+}
+
+@media (max-width: 995px){
+   
+
+    
+
+    .setting{
+        width: 75px;
+    }
+
+    .setting_one{
+        width: 129px;
+    }
+
+    .setting_two{
+        width: 138px;
+    }
+
+    .setting_free{
+        width: 71px;
+    }
+
+    .setting_four::after{
+        width: 72px;
+    }
+
+
+    .setting_four:hover::after{
+        width: 91px; 
+        left: -10px;
+    }
+
+    .nav__links{
+        margin-right: 15px;
+    }
+
+    
+}
+
+@media (max-width: 961px){
+    .logo__link{
+        background: url(../img/icon/logosmall.svg) no-repeat;
+        background-position: center;
+        max-width: 108px;
+       width: 100%;
+    }
+
+   
+
+    .logo{
+        min-width: 108px;
+    }
+
+    .btn__call{
+        font-size: 16px;
+        font-weight: 400;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
+@media (max-width: 926px){
+    .nav__links{
+        display: none;
+    }
+
+    .btn_open_burger{
+        display: flex;
+}
+
+}
